objects/ASI_CRM_CN_Issue_Sharing_Admin__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Complaint</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
                <value>
                    <fullName>External GMA</fullName>
                </value>
                <value>
                    <fullName>Image Outlet Execution</fullName>
                </value>
                <value>
                    <fullName>Internal GMA</fullName>
                </value>
                <value>
                    <fullName>Look-alike</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Traceability</fullName>
                </value>
                <value>
                    <fullName>Trade Complaint</fullName>
                </value>
                <value>
                    <fullName>Conflict with Trade</fullName>
                </value>
                <value>
                    <fullName>Service Complaint</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker (SV)</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker (PRQR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region_Code__c</fullName>
        <formula>ASI_CRM_CN_Region__r.ASI_CRM_Region_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Issue Sharing Admin</relationshipLabel>
        <relationshipName>Issue_Sharing_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_QR_code_sticker_issue_category__c</fullName>
        <label>QR code sticker issue category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QR code cannot be scanned</fullName>
                </value>
                <value>
                    <fullName>Fake QR code sticker</fullName>
                </value>
                <value>
                    <fullName>QR website issue</fullName>
                </value>
                <value>
                    <fullName>Sticker artwork suggestion</fullName>
                </value>
                <value>
                    <fullName>Sticker position issue</fullName>
                </value>
                <value>
                    <fullName>Damage QR code sticker</fullName>
                </value>
                <value>
                    <fullName>Sticker quality issue</fullName>
                </value>
                <value>
                    <fullName>Black cap issue</fullName>
                </value>
                <value>
                    <fullName>Sticker data missing</fullName>
                </value>
                <value>
                    <fullName>Bottling date not matching</fullName>
                </value>
                <value>
                    <fullName>System improving requirement</fullName>
                </value>
                <value>
                    <fullName>Lack communication information</fullName>
                </value>
                <value>
                    <fullName>Device issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue Sharing Admin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_City__c</columns>
        <columns>ASI_CRM_CN_Inactive__c</columns>
        <columns>ASI_CRM_CN_Issue_Type__c</columns>
        <columns>ASI_CRM_CN_Region__c</columns>
        <columns>ASI_CRM_CN_Region_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Issue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Issue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sharing Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Sharing Admin</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>